# tmplmt

./: .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml
data/tmpl_imgs/kiban/csv/: result0.csv
data/tmpl_imgs/pet_cap/csv/: result0.csv
scripts/: eval_shape_matching.py
src/tmpl/: __init__.py
src/tmpl/datasets/: __init__.py  template_dataset.py
src/tmpl/io/: __init__.py  image_loader.py
src/tmpl/matching/: __init__.py  engine.py  shape.py
tests/unit/: test_pet_cap_dataset.py  test_shape_template_matcher.py  test_template_matcher.py
