[tool.poetry]
name = "tmpl"
version = "0.1.0"
description = ""
authors = ["Maintainer <maintainer@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pydantic = ">=2.0.0"
PySide6 = ">=6.0.0"
pyyaml = ">=6.0"
typing-extensions = ">=4.0.0"
opencv-python = ">=4.5.0"
Pillow = ">=8.0.0"
numpy = ">=1.20.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-qt = ">=4.0.0"
pytest-cov = ">=4.0.0"
black = ">=22.0.0"
flake8 = ">=5.0.0"
mypy = ">=1.0.0"
pytest-xdist = "^3.8.0"
ruff = "^0.12.8"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
